Completed test of the service. Exluding antagonist that has some problems all works
