# health_service/[OLD]health_interface/swagger_server/models/__init__.py
@@ -1,12 +1,0 @@
-# coding: utf-8
-
-# flake8: noqa
-from __future__ import absolute_import
-# import models into model package
-from swagger_server.models.bad_response import BadResponse
-from swagger_server.models.containers_address_body import ContainersAddressBody
-from swagger_server.models.containers_address_body1 import ContainersAddressBody1
-from swagger_server.models.containers_body import ContainersBody
-from swagger_server.models.correct_response import CorrectResponse
-from swagger_server.models.test_address_body import TestAddressBody
-from swagger_server.models.test_body import TestBody
