# health_service/health_interface/swagger_server/models/__init__.py
@@ -10,6 +10,7 @@ from swagger_server.models.container_response import ContainerResponse
 from swagger_server.models.containers_address_body import ContainersAddressBody
 from swagger_server.models.containers_address_body1 import ContainersAddressBody1
 from swagger_server.models.containers_body import ContainersBody
+from swagger_server.models.correct_multi_response import CorrectMultiResponse
 from swagger_server.models.correct_response import CorrectResponse
 from swagger_server.models.test_address_body import TestAddressBody
 from swagger_server.models.test_body import TestBody
