# health_service/health_interface/swagger_server/models/correct_multi_response.py
@@ -9,22 +9,22 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class CorrectResponse(Model):
+class CorrectMultiResponse(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-    def __init__(self, command: str=None, content: object=None):  # noqa: E501
-        """CorrectResponse - a model defined in Swagger
+    def __init__(self, command: str=None, content: List[object]=None):  # noqa: E501
+        """CorrectMultiResponse - a model defined in Swagger
 
-        :param command: The command of this CorrectResponse.  # noqa: E501
+        :param command: The command of this CorrectMultiResponse.  # noqa: E501
         :type command: str
-        :param content: The content of this CorrectResponse.  # noqa: E501
-        :type content: object
+        :param content: The content of this CorrectMultiResponse.  # noqa: E501
+        :type content: List[object]
         """
         self.swagger_types = {
             'command': str,
-            'content': object
+            'content': List[object]
         }
 
         self.attribute_map = {
@@ -35,58 +35,56 @@ class CorrectResponse(Model):
         self._content = content
 
     @classmethod
-    def from_dict(cls, dikt) -> 'CorrectResponse':
+    def from_dict(cls, dikt) -> 'CorrectMultiResponse':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The CorrectResponse of this CorrectResponse.  # noqa: E501
-        :rtype: CorrectResponse
+        :return: The CorrectMultiResponse of this CorrectMultiResponse.  # noqa: E501
+        :rtype: CorrectMultiResponse
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def command(self) -> str:
-        """Gets the command of this CorrectResponse.
+        """Gets the command of this CorrectMultiResponse.
 
         type of results: ok or error  # noqa: E501
 
-        :return: The command of this CorrectResponse.
+        :return: The command of this CorrectMultiResponse.
         :rtype: str
         """
         return self._command
 
     @command.setter
     def command(self, command: str):
-        """Sets the command of this CorrectResponse.
+        """Sets the command of this CorrectMultiResponse.
 
         type of results: ok or error  # noqa: E501
 
-        :param command: The command of this CorrectResponse.
+        :param command: The command of this CorrectMultiResponse.
         :type command: str
         """
 
         self._command = command
 
     @property
-    def content(self) -> object:
-        """Gets the content of this CorrectResponse.
+    def content(self) -> List[object]:
+        """Gets the content of this CorrectMultiResponse.
 
-        Brief description of the operation result  # noqa: E501
 
-        :return: The content of this CorrectResponse.
-        :rtype: object
+        :return: The content of this CorrectMultiResponse.
+        :rtype: List[object]
         """
         return self._content
 
     @content.setter
-    def content(self, content: object):
-        """Sets the content of this CorrectResponse.
+    def content(self, content: List[object]):
+        """Sets the content of this CorrectMultiResponse.
 
-        Brief description of the operation result  # noqa: E501
 
-        :param content: The content of this CorrectResponse.
-        :type content: object
+        :param content: The content of this CorrectMultiResponse.
+        :type content: List[object]
         """
 
         self._content = content
